--- a/src/com/github/chinyangatl/todolist/todoItemDialog.fxml
+++ b/src/com/github/chinyangatl/todolist/todoItemDialog.fxml
@@ -14,7 +14,7 @@
             <Label text="Short Description" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
             <TextField fx:id="shortDesc" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
             <Label text="Details:" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <TextArea fx:id="details" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+            <TextArea fx:id="details" GridPane.rowIndex="1" GridPane.columnIndex="1" wrapText="true"/>
             <Label text="Deadline:" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
             <DatePicker fx:id="deadline" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
         </GridPane>
